Refactor lab3 and go on working on lab4

--- a/volohov/java/io/github/lionell/lab4/BUILD
+++ b/volohov/java/io/github/lionell/lab4/BUILD
@@ -2,8 +2,8 @@ package(default_visibility = ["//visibility:public"])
 
 java_binary(
     name = "server1",
-    srcs = ["Runner1.java"],
-    main_class = "io.github.lionell.lab4.Runner1",
+    srcs = ["Server1.java"],
+    main_class = "io.github.lionell.lab4.Server1",
     deps = [
         ":server",
     ],
@@ -11,8 +11,8 @@ java_binary(
 
 java_binary(
     name = "server2",
-    srcs = ["Runner2.java"],
-    main_class = "io.github.lionell.lab4.Runner2",
+    srcs = ["Server2.java"],
+    main_class = "io.github.lionell.lab4.Server2",
     deps = [
         ":server",
     ],
@@ -23,20 +23,12 @@ java_binary(
     srcs = ["Main.java"],
     main_class = "io.github.lionell.lab4.Main",
     deps = [
-        ":client",
     ],
 )
 
 java_library(
     name = "server",
     srcs = ["Server.java"],
-    deps = [
-    ],
-)
-
-java_library(
-    name = "client",
-    srcs = ["Client.java"],
     deps = [
     ],
 )
