--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "test_db"]
-	path = test_db
+[submodule "db/test_db"]
+	path = db/test_db
 	url = https://github.com/datacharmer/test_db.git
