--- a/parallel_prog/tools/BUILD
+++ b/parallel_prog/tools/BUILD
@@ -4,3 +4,8 @@ py_binary(
 		name = "generate_dataset",
 		srcs = ["generate_dataset.py"],
 )
+
+py_binary(
+		name = "evaluate_norm",
+		srcs = ["evaluate_norm.py"],
+)
