--- a/parallel_prog/lib/BUILD
+++ b/parallel_prog/lib/BUILD
@@ -45,3 +45,9 @@ cc_library(
 		srcs = ["page.cc"],
 		hdrs = ["page.h"],
 )
+
+cc_library(
+		name = "benchmark",
+		srcs = ["benchmark.cc"],
+		hdrs = ["benchmark.h"],
+)
