--- a/parallel_prog/tools/BUILD
+++ b/parallel_prog/tools/BUILD
@@ -9,3 +9,17 @@ py_binary(
 		name = "evaluate_norm",
 		srcs = ["evaluate_norm.py"],
 )
+
+cc_binary(
+		name = "generate_dataset_cc",
+		srcs = ["generate_dataset.cc"],
+		deps = [
+				"//lib:benchmark",
+				"//proto:chunk_cc_proto",
+				"//proto:metadata_cc_proto",
+		],
+		linkopts = [
+				"-lgflags",
+				"-lglog",
+		],
+)
