--- a/parallel_prog/tools/BUILD
+++ b/parallel_prog/tools/BUILD
@@ -1,22 +1,17 @@
 package(default_visibility = ["//visibility:public"])
 
 py_binary(
-		name = "generate_dataset",
-		srcs = ["generate_dataset.py"],
-)
-
-py_binary(
-		name = "evaluate_norm",
-		srcs = ["evaluate_norm.py"],
+		name = "generate_dataset_old",
+		srcs = ["generate_dataset_old.py"],
 )
 
 cc_binary(
-		name = "generate_dataset_cc",
+		name = "generate_dataset",
 		srcs = ["generate_dataset.cc"],
 		deps = [
-				"//lib:benchmark",
 				"//proto:chunk_cc_proto",
 				"//proto:metadata_cc_proto",
+				"//lib:benchmark",
 		],
 		linkopts = [
 				"-lgflags",
