--- a/.gitmodules
+++ b/.gitmodules
@@ -5,3 +5,6 @@
 [submodule "parallel_prog/pagerank"]
 	path = parallel_prog/pagerank
 	url = git@github.com:lionell/pagerank.git
+[submodule "sys_prog/syntax-analyzer"]
+	path = sys_prog/syntax-analyzer
+	url = git@github.com:lionell/syntax-analyzer.git
