--- a/.gitmodules
+++ b/.gitmodules
@@ -14,3 +14,6 @@
 [submodule "parallel_prog"]
 	path = parallel_prog
 	url = git@github.com:lionell/pagerank.git
+[submodule "crypto"]
+	path = crypto
+	url = git@github.com:lionell/pollard.git
