--- a/refactoring/Makefile
+++ b/refactoring/Makefile
@@ -10,4 +10,4 @@ lchild.tab.cpp: lchild.y
 	yacc -o lchild.tab.cpp -d lchild.y
 
 parser: lchild.yy.cpp lchild.tab.cpp
-	g++ -D_GLIBCXX_USE_CXX11_ABI=0 -o parser lchild.yy.cpp lchild.tab.cpp
+	g++ -D_GLIBCXX_USE_CXX11_ABI=0 -w -o parser lchild.yy.cpp lchild.tab.cpp
