Update PARCS-JAVA lab

--- a/parcs/Bluck/Makefile
+++ b/parcs/Bluck/Makefile
@@ -13,5 +13,7 @@ out/DFS.jar: out/parcs.jar src/DFS.java src/Node.java
 	@jar cf out/DFS.jar -C src DFS.class -C src Node.class
 	@rm -f src/DFS.class src/Node.class
 
+build: out/Bluck.jar out/DFS.jar
+
 run: out/Bluck.jar out/DFS.jar
 	@cd out && java -cp 'parcs.jar:Bluck.jar' Bluck
